# scaffold

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scaffold/: commands.py  directors.py  main.py  projects.py
scaffold/builders/: __init__.py  builder.py  python_builders.py  vscode_builders.py
scaffold/products/: __init__.py  python_products.py  vscode_products.py
scaffold/products/tools/: __init__.py  commitizen_adapter.py  git_adapter.py  poetry_adapter.py  toml_adapter.py
scaffold/tools/: __init__.py  poetry.py  pyproject.py
structure/: directors.py  projects.py
structure/builders/: __init__.py  python_builders.py  vscode_builders.py
structure/products/: __init__.py  python_products.py
tests/: test_directors.py  test_python_building.py  test_python_creation.py  test_scaffold.py
tests/builders/: test_builder.py  test_django_builder.py  test_python_builders.py  test_vscode_builders.py
