[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
license = 'MIT'
authors = ["vunk.lai <vunk.lai@zyxel.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
# code formatter
isort = "^5.10.1"
black = "^22.10.0"
# linter
pylint = "^2.15.6"
mypy = "^0.991"
# test
pytest = "^7.2.0"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  'missing-module-docstring',
  'missing-class-docstring',
  'missing-function-docstring',
]

[tool.pylint.basic]
good-names = [
  'fr',
  '_',
]

[tool.poetry.scripts]
scaffold = 'scaffold.main:scaffold'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
