[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
license = 'MIT'
authors = ["vunk.lai <vunk.lai@zyxel.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
GitPython = "^3.1.29"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
# code formatter
isort = "^5.10.1"
black = "^22.10.0"
# linter
pylint = "^2.15.6"
mypy = "^0.991"
types-requests = "^2.28.11.5"
# test
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  'missing-module-docstring',
  'missing-class-docstring',
  'missing-function-docstring',
  'fixme',
  'too-few-public-methods'
]

[tool.pylint.basic]
good-names = [
  'fr',
  'fw',
  '_',
]

[tool.poetry.scripts]
scaffold = 'scaffold.commands:entrypoint'

[tool.commitizen]
[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
